# Hot-Job-Recommender

./: .env  .gitignore  README.md  main.py  pyproject.toml  test_torch_only.py  verify_imports.py
src/engine/: embedder.py  vector_db.py
src/scraper/: main.py
src/utils/: config.py  loggers.py  schemas.py  validator.py
